Bug 307031 - Does not show any contacts
Summary: Does not show any contacts
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: send-file (other bugs)
Version First Reported In: 0.5.0
Platform: unspecified Linux
: NOR normal
Target Milestone: 0.5.1
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-19 10:26 UTC by David Edmundson
Modified: 2012-10-04 18:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-09-19 10:26:24 UTC
Error that comes up

tp-qt 0.9.3.1 WARN: Trying to retrieve capabilities from account, but FeatureCapabilities was not requested. Use becomeReady(FeatureCapabilities)
Comment 1 David Edmundson 2012-09-19 10:56:54 UTC
> Git commit e15161912d483683b20f91bf5b3cb73f35d87fb5 by David Edmundson.
> Committed on 19/09/2012 at 12:38.
> Pushed by davidedmundson into branch 'master'.
>
> Update features required to include Account::FeatureCaps, as this is now used by the AccountsModel
>
> Reviewed-by: Martin Klapetek
>
> M  +2    -1    mainwindow.cpp
>
> http://commits.kde.org/telepathy-send-file/e15161912d483683b20f91bf5b3cb73f35d87fb5