Update features required to include Account::FeatureCaps, as this is now used by the AccountsModel

Reviewed-by: Martin Klapetek
BUG: 307031